--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>process navbar</title>
 
-    <link rel="stylesheet" href="main.scss" type="text/css" media="all">
+    <link rel="stylesheet" href="index.css" type="text/css" media="all">
   </head>
   
   <body class="home">
